--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.h linguist-language=Objective-C;
-*.m linguist-language=Objective-C;
+*.h linguist-language=objective-c
+*.m linguist-language=objective-c
