--- a/Demo/playList.plist
+++ b/Demo/playList.plist
@@ -9,6 +9,8 @@
 		<string>T-ara </string>
 		<key>title</key>
 		<string>No.9</string>
+		<key>placeholder</key>
+		<string>default_bg_land</string>
 	</dict>
 	<dict>
 		<key>url</key>
@@ -17,6 +19,8 @@
 		<string>T-ara</string>
 		<key>title</key>
 		<string>Day by day</string>
+		<key>placeholder</key>
+		<string>default_bg_land</string>
 	</dict>
 	<dict>
 		<key>url</key>
@@ -25,6 +29,8 @@
 		<string>T-ara</string>
 		<key>title</key>
 		<string>Lovey Dovey(Drama Ver.)</string>
+		<key>placeholder</key>
+		<string>default_bg_land</string>
 	</dict>
 </array>
 </plist>
