--- a/Demo/playList.plist
+++ b/Demo/playList.plist
@@ -32,5 +32,15 @@
 		<key>placeholder</key>
 		<string>default_bg_land</string>
 	</dict>
+	<dict>
+		<key>url</key>
+		<string>http://220.249.115.46:18080/wav/ganghaoyujianni.mp4</string>
+		<key>artist</key>
+		<string>李玉刚</string>
+		<key>title</key>
+		<string>刚好遇见你</string>
+		<key>placeholder</key>
+		<string>default_bg_land</string>
+	</dict>
 </array>
 </plist>
